--- a/root/frondend/src/App.css
+++ b/root/frondend/src/App.css
@@ -1,38 +1,29 @@
 .App {
-  text-align: center;
+    display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-link {
+    text-decoration: none;
+    display: block;
+    padding: 10px 2rem;
+    color: #444;
+    font-family: sans-serif;
+    font-weight: 600;
+    text-align: center;
+    border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-link:hover {
+    background-color: #eee;
+} 
+.nav-bar {
+    height: 100vh;
+    border-right: 1px solid #ddd;
+    flex-grow: 1;
+    padding-right: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main {
+    flex-grow: 15;
+    padding: 0 5px;
 }
