add current day display

--- a/root/frondend/src/App.css
+++ b/root/frondend/src/App.css
@@ -1,3 +1,30 @@
 .App {
     font-family: 'Roboto', sans-serif;
 }
+
+.dayCard {
+    min-width: 200px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    text-align: center;
+    flex-basis: 0px;
+    color: #333;
+    border-bottom: 0;
+    transition: 0.5s;
+    
+    margin: 0px 5px;
+}
+
+.dayCardToday {
+    min-width: 200px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    text-align: center;
+    flex-basis: 0px;
+    color: #333;
+    border-bottom: 0;
+    transition: 0.5s;
+
+    z-index: 1;
+    box-shadow: 0px 2px 15px 0px #333;
+}
